cot-cli/tests/snapshot_testing/new/snapshots/cli__snapshot_testing__new__create_new_project-6.snap
---
source: cot-cli/tests/snapshot_testing/new/mod.rs
assertion_line: 19
description: "Verbosity level: trace"
info:
  program: cot
  args:
    - new
    - "-vvvvv"
    - /tmp/cot-test-Js5C41/project
---
success: true
exit_code: 0
----- stdout -----
TIMESTAMP [35mTRACE[0m [2mcot_cli::new_project[0m[2m:[0m Writing file: "/tmp/TEMP_PATH/project/Cargo.toml"
TIMESTAMP [35mTRACE[0m [2mcot_cli::new_project[0m[2m:[0m Writing file: "/tmp/TEMP_PATH/project/Cargo.lock"
TIMESTAMP [35mTRACE[0m [2mcot_cli::new_project[0m[2m:[0m Writing file: "/tmp/TEMP_PATH/project/bacon.toml"
TIMESTAMP [35mTRACE[0m [2mcot_cli::new_project[0m[2m:[0m Writing file: "/tmp/TEMP_PATH/project/.gitignore"
TIMESTAMP [35mTRACE[0m [2mcot_cli::new_project[0m[2m:[0m Writing file: "/tmp/TEMP_PATH/project/src/main.rs"
TIMESTAMP [35mTRACE[0m [2mcot_cli::new_project[0m[2m:[0m Writing file: "/tmp/TEMP_PATH/project/src/migrations.rs"
TIMESTAMP [35mTRACE[0m [2mcot_cli::new_project[0m[2m:[0m Writing file: "/tmp/TEMP_PATH/project/static/css/main.css"
TIMESTAMP [35mTRACE[0m [2mcot_cli::new_project[0m[2m:[0m Writing file: "/tmp/TEMP_PATH/project/templates/index.html"
TIMESTAMP [35mTRACE[0m [2mcot_cli::new_project[0m[2m:[0m Writing file: "/tmp/TEMP_PATH/project/config/dev.toml"
TIMESTAMP [35mTRACE[0m [2mcot_cli::new_project[0m[2m:[0m Writing file: "/tmp/TEMP_PATH/project/config/prod.toml.example"

----- stderr -----
[1m[92m    Creating[0m Cot project `project`
[1m[32m     Created[0m Cot project `project`
